--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-tar": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "tape": "^4.4.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   },
@@ -41,8 +42,8 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "rx": "^4.0.7",
-    "rx-request": "0.0.2",
-    "stampit": "^2.1.1",
+   "stampit": "^2.1.1",
+    "superagent": "^1.7.0",
     "underscore": "^1.8.3",
     "winston": "^2.1.1",
     "winston-logstash": "^0.2.11"
