--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "cluster": "^0.7.7",
     "compression": "^1.6.0",
     "express": "^4.13.3",
+    "history": "^1.17.0",
     "node-statsd": "^0.1.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-router": "^1.0.3",
     "rx": "^4.0.7",
-   "stampit": "^2.1.1",
+    "stampit": "^2.1.1",
     "superagent": "^1.7.0",
     "underscore": "^1.8.3",
     "winston": "^2.1.1",
